2009-01-09 23:09-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSMenu.m: Correction to previous change.  Update when
	setAutoenableItems: value is changed.  Altered update to 
	enable menu items when autoenable is not being performed.

2009-01-09 22:53-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSMenuItemCell.m: encode menu item in encodeWithCoder: 
	method.
	* Source/NSMenu.m: Add code to handle NSNoAutoenable
	* Source/NSPopUpButtonCell.m: Decode/encode selected index
	* Source/NSPrintInfo.m: Set orientation after the page size is 
	known, since it has no effect when done earlier.

2009-01-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSColorWell.m: Fix bug #25278 after checking behavior on MacOS

2009-01-09 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSWindow+Toolbar.h,
	* Source/NSWindow+Toolbar.m: Remove these file and move all code ...
	* Headers/AppKit/NSWindow.h,
	* Source/NSWindow.m: ... to here.
	* Source/NSToolbarFrameworkPrivate.h,
	* Headers/AppKit/AppKit.h,
	* Source/GNUmakefile: Remove references to these files.
	* Source/NSToolbar.m (-_toolbarView): Create the toolbar view here
	and not in [NSWindow setToolbar:].

2009-01-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m: Fix nil pointer exception.
	* Source/NSScrollView.m: Fix to notice theme activation and support
	themed color for separators.

2009-01-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow+Toolbar.m,
	* Source/NSToolbar.m,
	* Source/GSToolbarView.m: Revert the relationship between
	NSToolbar and GSToolbarView, now the toolbar retains the view.
	
2009-01-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m:
	* Source/GSThemeDrawing.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h:
	Add support for setting color of named parts.

2009-01-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSWindowDecorationView.m: No longer adjust the size of
	the content view, when a toolbar is added, removed or resized.
